--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
+      - name: Install SDK platform 36
+        run: sdkmanager "platforms;android-36"
+
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
