Switch release workflow to signed release APK
Add release signingConfig reading keystore from env vars.
Release workflow decodes keystore from secret, builds assembleRelease.
Enables in-place APK upgrades without uninstall.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,15 +38,26 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Run unit tests
-        run: ./gradlew testDebugUnitTest
+      - name: Decode release keystore
+        run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > haven-release.jks
 
-      - name: Build debug APK
-        run: ./gradlew assembleDebug
+      - name: Run unit tests
+        run: ./gradlew testReleaseUnitTest
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+
+      - name: Build release APK
+        run: ./gradlew assembleRelease
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
           files: |
-            app/build/outputs/apk/debug/haven-*-debug.apk
+            app/build/outputs/apk/release/haven-*-release.apk
